# focus

./: .travis.yml  build.bash  focus.cabal  stack.yaml
test/: Main.hs
